<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.wangshen.daqian.MainActivity">

    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/tab_true"
        android:layout_width="match_parent"
        android:layout_height="1px">

    </View>
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RadioButton
            android:drawableTop="@drawable/home_selector"
            style="@style/tab_style"
            android:text="@string/home"
            />
        <RadioButton
            android:drawableTop="@drawable/reference_selector"
            style="@style/tab_style"
            android:text="@string/reference"
            />
        <RadioButton
            android:drawableTop="@drawable/money_selector"
            style="@style/tab_style"
            android:text="@string/money"
            />
        <RadioButton
            android:drawableTop="@drawable/mine_selector"
            style="@style/tab_style"
            android:text="@string/user"
            />
    </RadioGroup>
</LinearLayout>
