<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/close3x"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/login"
        android:textColor="@color/blank"
        android:textSize="25sp"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:text="@string/mobile_login" />

    <EditText
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="71dp"
        android:background="@null"
        android:hint="@string/input_mobile"
        android:id="@+id/editText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="8dp"
        android:background="@color/tab_false">

    </View>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="@string/input_code"
        android:id="@+id/editText2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="7dp"
        android:background="@color/tab_false"
        android:id="@+id/view">

    </View>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignTop="@+id/editText2"
        android:text="@string/obtain_code"
        android:textColor="@color/login_code"
        android:textSize="16sp"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view"
        android:layout_alignStart="@+id/view"
        android:layout_below="@+id/view"
        android:layout_marginTop="19dp"
        android:text="@string/login_password"
        android:id="@+id/textView4" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:background="@drawable/login_btn"
        android:text="@string/login"
        android:id="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/registered"
        android:textColor="@color/blank"
        android:id="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5"
        android:text="@string/login_bottom_title"
        android:textSize="12sp" />

    <TextView
        android:background="@drawable/login_bottom_agreement"
        android:textSize="12sp"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:text="@string/login_bottom_agreement"
        android:textColor="@color/blank" />
</RelativeLayout>